# managed-notifications

./: .gitignore  CLAUDE.md  Makefile  OCPBUGS-16655-remediation-please-upgrade.json  OWNERS  README.md
.tekton/: managed-notifications-mcp-pull-request.yaml  managed-notifications-mcp-push.yaml
cluster/: clusterCloudProviderIs.txt  clusterIsCCS.txt  clusterIsErrored.txt  clusterIsInstalling.txt  clusterIsManaged.txt  clusterIsPrivateLink.txt  clusterIsReady.txt  clusterRegionIs.txt  clusterVersionGreaterThan.txt  clusterVersionGreaterThanEqualTo.txt  clusterVersionLessThan.txt  clusterVersionLessThanEqualTo.txt
hcp/: OCPBUGS_14611_Leftover_PersistentVolume.json  Operator_Workload_Scheduling_Issue.json  RequestServingNode_resized.json  WorkerNodes_Provisioning_error.json  WorkerNodes_Stopped_error.json  end_of_support_force_upgrade.json  eus_transition_attempted.json  eus_transition_success.json  hcp_aws_kms_permissions_issue.json  hcp_aws_scp_permissions_blocking_node_provision_issue.json  ip_range_is_full.json  karpenter_iam_role_misconfigured.json  node_ip_range_is_full.json  sts_deleted_provider.json  sts_operator_role_misconfigured.json  webhook_blocking_nodepool_update.json
mcp/: CLAUDE.md  Containerfile  README.md  main.py  mcp-config.json  pyproject.toml  start.sh
mcp/deploy/: example-template.yaml  openshift-template.yaml
mcp/scripts/: build_embeddings.py
ocm/: cluster_owner_disabled.json
osd/: AddonMisconfiguration.json  AlertmanagerSilencesActiveSRE.json  AllowedSourceRanges.json  BadMachineConfigPool.json  BadMachinePoolTaint.json  InvalidCIDR.json  (+170 more)
(+94 files in other folders)
